@@ -209,6 +209,13 @@ class SyntaxTracebackCases(unittest.TestCase):
                     b'ZeroDivisionError: division by zero']
         self.assertEqual(stderr.splitlines(), expected)
 
+    def test_print_exception(self):
+        output = StringIO()
+        traceback.print_exception(
+            Exception, Exception("projector"), None, file=output
+        )
+        self.assertEqual(output.getvalue(), "Exception: projector\n")
+
 
 class TracebackFormatTests(unittest.TestCase):
 
@@ -847,6 +854,12 @@ class TestTracebackException(unittest.TestCase):
         tb = test_tb(f, 6, None)
         exc = traceback.TracebackException(Exception, e, tb)
         self.assertEqual(exc.stack[0].locals, None)
+
+    def test_traceback_header(self):
+        # do not print a traceback header if exc_traceback is None
+        # see issue #24695
+        exc = traceback.TracebackException(Exception, Exception("haven"), None)
+        self.assertEqual(list(exc.format()), ["Exception: haven\n"])
 
 
 class MiscTest(unittest.TestCase):
