@@ -28,6 +28,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #24695: Fix a regression in traceback.print_exception().  If
+  exc_traceback is None we shouldn't print a traceback header like described
+  in the documentation.
+
 - Issue #24620: Random.setstate() now validates the value of state last element.
 
 - Issue #22485: Fixed an issue that caused `inspect.getsource` to return incorrect
